--- a/Algoritmos_e_Estrutura_de_Dados.ipynb
+++ b/Algoritmos_e_Estrutura_de_Dados.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPqmf0o2vPMc1oNLWul1y71",
+      "authorship_tag": "ABX9TyOBp8jy0HJVp8k0rDb1qwtj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,6 +86,39 @@
             "digite um primeiro numero1\n",
             "digite um segundo numero2\n",
             "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Crie um algoritmo em Python que calcule o valor do IMC de uma pessoa\n",
+        "num1 = float(input(\"peso: \"))\n",
+        "print(f\"seu peso é {num1} Kg\")\n",
+        "num2 = float(input(\"altura: \"))\n",
+        "print(f\"sua altura é {num2} m\")\n",
+        "resultado = num1 / (num2 * num2)\n",
+        "print(resultado)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nLysoWU468e-",
+        "outputId": "c080e9f0-c8ce-4c29-e0df-86a5a3d7c94f"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "peso: 65\n",
+            "seu peso é 65.0 Kg\n",
+            "altura: 1.72\n",
+            "sua altura é 1.72 m\n",
+            "21.971335857220122\n"
           ]
         }
       ]
