--- a/Algoritmos_e_Estrutura_de_Dados.ipynb
+++ b/Algoritmos_e_Estrutura_de_Dados.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOBp8jy0HJVp8k0rDb1qwtj",
+      "authorship_tag": "ABX9TyPHPyYwftKcUWneuCG0bDzg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,9 @@
     {
       "cell_type": "code",
       "source": [
+        "#SEMANA 1\n",
+        "\n",
+        "#Soma de dois números conhecidos em Python\n",
         "num1 = 1930\n",
         "num2 = 1640\n",
         "resultado = num1 + num2\n",
@@ -65,6 +68,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Soma de dois números desconhecidos em Python\n",
         "num1 = int(input(\"digite um primeiro numero\"))\n",
         "num2 = int(input(\"digite um segundo numero\"))\n",
         "resultado = num1 + num2\n",
@@ -106,9 +110,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nLysoWU468e-",
-        "outputId": "c080e9f0-c8ce-4c29-e0df-86a5a3d7c94f"
+        "outputId": "9e95e101-9927-4d91-86a8-5e88dab978df"
       },
-      "execution_count": 13,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,6 +123,50 @@
             "altura: 1.72\n",
             "sua altura é 1.72 m\n",
             "21.971335857220122\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#SEMANA 2\n",
+        "\n",
+        "# Criar um programa que retorne o nome, a cidade e a idade de um usuário atravéz da sua data de nascimento\n",
+        "\n",
+        "#importando a biblioteca datetime\n",
+        "from datetime import datetime\n",
+        "\n",
+        "nome = input('digite seu nome: ')\n",
+        "cidade = input('digite o nome da sua cidade natal: ')\n",
+        "\n",
+        "#Data de nascimento em formato de texto\n",
+        "data_nasc = input('Quando você nasceu (DD/MM/YYYY): ')\n",
+        "\n",
+        "#Usando a biblioteca datetime - a função now pega o valor da data de hoje\n",
+        "#Já a função striptime pega o valor em texto e converte em tipo datetime\n",
+        "idade = datetime.now() - datetime.strptime(data_nasc, '%d/%m/%Y')\n",
+        "idade = idade.days // 365\n",
+        "\n",
+        "print(f'Seu nome é {nome}, nascido em {cidade} e sua idade é {idade} anos.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DLX73X90QaYw",
+        "outputId": "e15c2c2b-fa63-4467-fd82-be0eff447b20"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite seu nome: Jesse Jarvin Gruenewald Nucum\n",
+            "digite o nome da sua cidade natal: Santa Maria de Jetibá-ES\n",
+            "Quando você nasceu (DD/MM/YYYY): 27/06/2005\n",
+            "Seu nome é Jesse Jarvin Gruenewald Nucum, nascido em Santa Maria de Jetibá-ES e sua idade é 19 anos.\n"
           ]
         }
       ]
