--- a/Aula13_03.ipynb
+++ b/Aula13_03.ipynb
@@ -214,8 +214,10 @@
       "cell_type": "code",
       "source": [
         "# 7. Solicite o ano de nascimento do usuário e calcule a idade aproximada.\n",
-        "ano_nasc = int(input('digite seu ano de nascimento'))\n",
-        "idade_aproximada = 2025 - ano_nasc\n",
+        "from datetime import datetime\n",
+        "ano_nasc = int(input('digite seu ano de nascimento: '))\n",
+        "data_atual = datetime.now().year\n",
+        "idade_aproximada = data_atual - ano_nasc\n",
         "print(f'Sua idade aproximada é {idade_aproximada}.')"
       ],
       "metadata": {
@@ -223,15 +225,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ccc8TzjNWJIg",
-        "outputId": "369b2828-65f1-4379-f27d-035e1f531805"
+        "outputId": "0cd01bc7-94b2-4887-bb24-a0b22ccc0f44"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "digite seu ano de nascimento2005\n",
+            "digite seu ano de nascimento: 2005\n",
             "Sua idade aproximada é 20.\n"
           ]
         }
