--- a/Aula13_03.ipynb
+++ b/Aula13_03.ipynb
@@ -24,7 +24,12 @@
         "# 7. Solicite o ano de nascimento do usuário e calcule a idade aproximada.\n",
         "# 8. Peça três números ao usuário e exiba a média aritmética.\n",
         "# 9. Solicite a data de nascimento do usuário no formato AAAA-MM-DD e calcule aproximadamente quantos dias ele já viveu.\n",
-        "# 10. Solicite uma data no formato AAAA-MM-DD e exiba-a no formato DD/MM/AAAA."
+        "# 10. Solicite uma data no formato AAAA-MM-DD e exiba-a no formato DD/MM/AAAA.\n",
+        "# 11. Solicite o raio de um círculo e calcule sua área.\n",
+        "# 12. Solicite o peso e a altura da pessoa e calcule o IMC.\n",
+        "# 13. Peça a altura e as bases de um trapézio e calcule a sua área.\n",
+        "# 14. Solicite uma temperatura em Celsius e converta-a para Fahrenheit.\n",
+        "# 15. Peça um número e exiba o fatorial dele."
       ],
       "metadata": {
         "id": "sHq4IAZMQvE4"
@@ -227,7 +232,7 @@
         "id": "Ccc8TzjNWJIg",
         "outputId": "0cd01bc7-94b2-4887-bb24-a0b22ccc0f44"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,6 +309,7 @@
       "cell_type": "code",
       "source": [
         "# 10. Solicite uma data no formato AAAA-MM-DD e exiba-a no formato DD/MM/AAAA.\n",
+        "from datetime import datetime\n",
         "data = input('Digite uma data no formato AAAA-MM-DD: ')\n",
         "data = datetime.strptime(data, '%Y-%m-%d')\n",
         "data_formatada = data.strftime('%d/%m/%Y')\n",
@@ -314,9 +320,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w0RRQtsrWPQJ",
-        "outputId": "ac0330e6-a152-46d5-d645-976efc3e7058"
+        "outputId": "1fa40e4a-39f9-4994-f184-7d9f75d52966"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,6 +330,150 @@
           "text": [
             "Digite uma data no formato AAAA-MM-DD: 2024-04-26\n",
             "Data formatada: 26/04/2024\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 11. Solicite o raio de um círculo e calcule sua área.\n",
+        "import math\n",
+        "raio = float(input('Digite raio de um círculo (cm): '))\n",
+        "area = math.pi*(pow(raio, 2))\n",
+        "print(f' Área do círculo é: {area:.2f} cm')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GymTtqrAzsZr",
+        "outputId": "fdd08a2a-afbe-42a1-8a75-3fdead588951"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite raio de um círculo (cm): 5\n",
+            " Área do círculo é: 78.54 cm\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 12. Solicite o peso e a altura da pessoa e calcule o IMC.\n",
+        "peso = float(input('Digite seu peso'))\n",
+        "altura = float(input('Digite sua altura'))\n",
+        "imc = peso / pow(altura, 2)\n",
+        "print(f'Seu IMC é: {imc}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mAfUJH_-zvP5",
+        "outputId": "c199bce1-2426-4bd4-ffad-da3098413733"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite seu peso65\n",
+            "Digite sua altura1.72\n",
+            "Seu IMC é: 21.971335857220122\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 13. Peça a altura e as bases de um trapézio e calcule a sua área.\n",
+        "Base = float(input('Digite a maior base do trapézio (cm)'))\n",
+        "base = float(input('Digite a menor base do trapézio (cm)'))\n",
+        "altura = float(input('Digite a altura do trapézio (cm)'))\n",
+        "area = ((Base + base)*altura)/2\n",
+        "print(f'Área do trapézio é: {area:.2f} cm²')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Myu_mApQzwrx",
+        "outputId": "5e56c2b2-8a40-4726-830f-bc9329057319"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a maior base do trapézio (cm)10\n",
+            "Digite a menor base do trapézio (cm)5\n",
+            "Digite a altura do trapézio (cm)5\n",
+            "Área do trapézio é: 37.50 cm²\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 14. Solicite uma temperatura em Celsius e converta-a para Fahrenheit.\n",
+        "temperatura = float(input('Digite a tempuratura (°C)'))\n",
+        "Fahrenheit = ((9/5)*temperatura) + 32\n",
+        "print(f'A tempuratura é {Fahrenheit} °F')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rH36K4xFzxvZ",
+        "outputId": "1144972b-8db9-49af-d341-22ac347f482f"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a tempuratura (°C)25\n",
+            "A tempuratura é 77.0 °F\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 15. Peça um número e exiba o fatorial dele.\n",
+        "numero = int(input('Digite um número: '))\n",
+        "fatorial = 1\n",
+        "for i in range(1, numero + 1):\n",
+        "    fatorial *= i\n",
+        "print(f'O fatorial de {numero} é {fatorial}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AhRLljBSApXk",
+        "outputId": "de5d7ba1-d3fd-4950-f6d5-096f68a703ee"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número: 5\n",
+            "O fatorial de 5 é 120\n"
           ]
         }
       ]
