--- a/Aula_20_e_21_03.ipynb
+++ b/Aula_20_e_21_03.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNsJGyuTpN8/o5rfSQ09V0E",
+      "authorship_tag": "ABX9TyOAf/9Qyy01Vdxolr84ZX5i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -193,7 +193,7 @@
         "\n",
         "if 's' in acao:\n",
         "  print('Continuar')\n",
-        "if acao == 'n':\n",
+        "elif acao == 'n':\n",
         "  print('Sair')\n",
         "else:\n",
         "  print('Opção inválida!')"
@@ -203,15 +203,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0cX1rmpzb5Wz",
-        "outputId": "e062db88-5b58-4d21-afb5-94ffcc62ebb1"
+        "outputId": "0a45de8b-f081-483e-bf0b-160252f3c318"
       },
-      "execution_count": 72,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite \"S\" para continuar e \"N\" para sair!g\n",
+            "Digite \"S\" para continuar e \"N\" para sair!h\n",
             "Opção inválida!\n"
           ]
         }
@@ -316,33 +316,38 @@
         "# 10. Peça a quantidade de horas trabalhadas e o valor por hora. Se trabalhou até 40 horas, calcule o salário normalmente (horas × valor por hora).\n",
         "    # Se trabalhou mais de 40 horas, as horas extras devem ter um adicional de 50% (horas extras × valor por hora × 1.5). Crie um algoritmo em Python que realize esse cálculo corretamente.\n",
         "\n",
-        "horas = int(input('Digite o número de horas trabalhadas na semana: '))\n",
+        "horas = int(input('Digite o número de horas trabalhadas por semana: '))\n",
         "sh = float(input('Digite o valor por hora de serviço: '))\n",
         "\n",
         "if horas <= 40:\n",
         " salario1 = horas*sh\n",
-        " print(f'Salário do mês é R${salario1}!')\n",
+        " salario12 = salario1 * 4\n",
+        " print(f'Salário da semana é R${salario1}!')\n",
+        " print(f'Salário do mês é R${salario12}!')\n",
         "else:\n",
         "  adicional = horas - 40\n",
         "  salario2 = (40*sh) + (adicional*1.5*sh)\n",
-        "  print(f'Salário do mês é R${salario2}!')"
+        "  salario21 = salario2 * 4\n",
+        "  print(f'Salário da semana é R${salario2}!')\n",
+        "  print(f'Salário do mês é R${salario21}!')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "THJ0K3dmggxP",
-        "outputId": "281c8c8e-4ab0-4373-a7d8-9c18ee2eec74"
+        "outputId": "81ae8747-3dae-480d-e31e-634bb28ef49b"
       },
-      "execution_count": 92,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite o número de horas trabalhadas na semana: 44\n",
+            "Digite o número de horas trabalhadas por semana: 44\n",
             "Digite o valor por hora de serviço: 20\n",
-            "Salário do mês é R$920.0!\n"
+            "Salário da semana é R$920.0!\n",
+            "Salário do mês é R$3680.0!\n"
           ]
         }
       ]
